--- a/packages/react-components/src/styles/index.css
+++ b/packages/react-components/src/styles/index.css
@@ -3,17 +3,20 @@
 @tailwind utilities;
 
 @layer base {
+    * {
+        @apply box-border border-fuselage-50 dark:border-fuselage-800;
+    }
+
     *:not(input, [data-radix-menu-content]) {
-        @apply focus-visible:outline-ocean-500 dark:focus-visible:outline-semantic-green-500 focus-visible:outline-dashed focus-visible:outline-offset-2 focus-visible:outline-2 focus-visible:bg-ocean-500/10 focus-visible:dark:bg-semantic-green-500/10;
+        @apply focus-visible:outline-ocean-500 dark:focus-visible:outline-semantic-green-500 focus-visible:outline-dashed focus-visible:outline-offset-2 focus-visible:outline-2;
     }
 
     html, body, #root {
-        @apply h-full scroll-smooth;
+        @apply min-h-full scroll-smooth;
     }
 
     body {
-        @apply transition-colors dark:bg-fuselage-800 bg-white;
-        @apply dark:text-white selection:dark:bg-semantic-green-500/25 selection:dark:text-white selection:bg-ocean-700/25;
+        @apply bg-semantic-blue-50 dark:bg-fuselage-900 text-fuselage-800 dark:text-fuselage-50 font-sans;
     }
 
     ::-webkit-scrollbar {
@@ -25,7 +28,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-        @apply bg-fuselage-50/50 dark:bg-fuselage-700;
+        @apply bg-fuselage-50 dark:bg-fuselage-700;
     }
 
     ::-webkit-scrollbar, ::-webkit-scrollbar-track {
