--- a/components/react/src/styles/storybook.css
+++ b/components/react/src/styles/storybook.css
@@ -6,7 +6,7 @@
   }
 
   *:not(input, [data-radix-menu-content]) {
-    @apply focus-visible:outline-ocean-500 dark:focus-visible:outline-semantic-green-500 focus-visible:outline-dashed focus-visible:outline-offset-2 focus-visible:outline-2;
+    @apply focus-visible:outline-dashed focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ocean-500 dark:focus-visible:outline-semantic-green-500;
   }
 
   html,
@@ -16,14 +16,14 @@
   }
 
   body {
-    @apply bg-semantic-blue-50 dark:bg-fuselage-900 text-fuselage-800 dark:text-fuselage-50 font-sans;
+    @apply bg-semantic-blue-50 font-sans text-fuselage-800 dark:bg-fuselage-900 dark:text-fuselage-50;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
   }
 
   ::-webkit-scrollbar {
-    @apply w-1 h-0;
+    @apply h-0 w-1;
   }
 
   ::-webkit-scrollbar,
