feat: update button design, update readme & fix styles (#76)
* chore: update readme & add build and storybbok commands

* feat: update button variants

* feat: add loading to button

* feat: update fuselage-100 to a better tone of gray. Former one was blueish

* chore: fix font Nunito Sans

* chore: update font sizes for button

* feat: update dark button colors to white

* chore: fix dark primary disabled button

* chore: fix secondary bg contrast

* chore: add changeset

* chore: update pkg build name to prebuild

--- a/components/react/src/styles/colors.css
+++ b/components/react/src/styles/colors.css
@@ -25,7 +25,7 @@
     --ocean-900: 16 23 47; /* #10172F */
     --ocean: 60 85 172; /* #3C55AC */
     --fuselage-50: 249 250 255; /* #f9faff */
-    --fuselage-100: 238 239 252; /* #eeeffc */
+    --fuselage-100: 238 239 245; /* #EEEFF5 */
     --fuselage-150: 224 225 236; /* #e0e1ec */
     --fuselage-200: 210 211 224; /* #d2d3e0 */
     --fuselage-250: 186 187 204; /* #babbcc */
